--- a/styles/main.module.css
+++ b/styles/main.module.css
@@ -48,3 +48,117 @@
   color: #fff;
   margin: 0;
 }
+
+.itemContent {
+  width: 100%;
+  height: 58rem;
+  padding: 2rem;
+}
+
+.itemImageContainer {
+  width: 6rem;
+  height: 6rem;
+  background-color: #212121;
+  border-radius: 10%;
+  border: #ffffff80 solid 1px;
+}
+
+.itemImage {
+  margin: 0.3rem auto;
+}
+
+.itemHeader {
+  display: flex;
+  gap: 2rem;
+}
+
+.itemHeaderName {
+  color: #ffffff;
+  font-size: 2rem;
+  font-weight: 700;
+}
+
+.itemHeaderID {
+  color: #ffffff50;
+  font-size: x-large;
+  font-weight: 400;
+}
+
+.content {
+  display: flex;
+  width: 100%;
+  padding-top: 1rem;
+}
+
+.contentLeft {
+  border: red solid ;
+  width: 75%;
+  height: 48rem;
+}
+
+.contentRight {
+  width: 25%;
+  padding: 1rem 0rem;
+  height: fit-content;
+
+}
+
+.lynnWasHere {
+  margin: auto;
+  width: 85%;
+  padding: 0.5rem 1rem;
+  border-radius: 0.5rem;
+  background-color: #ffffff20;
+}
+
+.statsList {
+  margin-top: 1rem;
+  list-style: none;
+  padding: 0;
+  overflow-y: auto;
+  scrollbar-width: none;
+}
+
+.statsList::-webkit-scrollbar {
+  display: none;
+}
+
+.statsList::-webkit-scrollbar-track {
+  background: #2c2c2c;
+  border-radius: 4px;
+}
+
+.statsList::-webkit-scrollbar-thumb {
+  background-color: #444;
+  border-radius: 4px;
+  border: 2px solid #2c2c2c;
+}
+
+.statItem {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.5rem;
+  background-color: #2c2c2c;
+  border: 1px solid #444;
+  border-radius: 0.25rem;
+  margin-bottom: 0.5rem;
+}
+
+.statName {
+  font-weight: bold;
+  color: #ffffff;
+}
+
+.statValue {
+  background-color: #3c3c3c;
+  color: #ffffff;
+  font-weight: bold;
+  padding: 0.2rem 0.5rem;
+  border-radius: 0.25rem;
+}
+
+.nglIRanOutOfClassNames {
+  font-weight: 500;
+  font-size: x-large;
+}
