--- a/styles/sidebar.module.css
+++ b/styles/sidebar.module.css
@@ -186,11 +186,15 @@
 }
 
 .badgeListWrapper::before {
-  left: 0;
-  background: linear-gradient(to right, rgba(0 0 0 / 0.08), rgba(0, 0, 0, 0));
+  left: 0;/*
+  background: linear-gradient(to right, rgba(0 0 0 / 0.08), rgba(0, 0, 0, 0));*/
 }
 
 .badgeListWrapper::after {
-  right: 0;
-  background: linear-gradient(to left, rgba(0 0 0 / 0.08), rgba(0, 0, 0, 0));
+  right: 0;/*
+  background: linear-gradient(to left, rgba(0 0 0 / 0.08), rgba(0, 0, 0, 0)); */
+}
+
+.svg {
+  margin: auto;
 }
