--- a/styles/sidebar.module.css
+++ b/styles/sidebar.module.css
@@ -53,8 +53,8 @@
   background-color: var(--secondary);
   padding: 1rem;
   border-radius: 0.5rem;
-  height: 25rem;
-  max-height: 25rem;
+  height: fit-content;
+  min-height: 25rem;
 }
 
 .itemImage {
@@ -96,7 +96,7 @@
   margin-top: 1rem;
   list-style: none;
   padding: 0;
-  max-height: 11rem;
+  min-height: 11rem;
   overflow-y: auto;
   scrollbar-width: none;
 }
